[project]
name = "gost-node"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "古月", email = "laoshan-tech@yandex.com"},
]
dependencies = [
    "apscheduler>=4.0.0a4",
    "httpx>=0.27.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "AGPL"}


[tool.pdm]
distribution = false
