[project]
name = "gost-node"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "古月", email = "laoshan-tech@yandex.com"},
]
dependencies = [
    "httpx>=0.27.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.1",
    "apscheduler>=3.10.4",
    "pytest>=8.1.1",
    "pytest-asyncio>=0.23.5.post1",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "AGPL"}


[tool.pdm]
distribution = false
